--- a/styles/style.scss
+++ b/styles/style.scss
@@ -20,6 +20,15 @@ main {
       100vh - #{$main_vertical_margin * 2}px - #{$footer_height}rem
     );
   }
+
+  button {
+    background: none;
+    border: none;
+    padding: 0;
+    font: inherit;
+    color: inherit;
+    cursor: pointer;
+  }
 }
 
 footer {
